--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  context_menu:
+  menus:
     path: ../
 
 # For information on the generic Dart part of this file, see the
